test/error/s_unknownstruct.lua
hstructure S
	s : S; -- ok to reference self
	t : T; -- undefined structure
end
